--- a/ConcatenateBases.ipynb
+++ b/ConcatenateBases.ipynb
@@ -27,8 +27,8 @@
     }
    ],
    "source": [
-    "dou_old = pd.read_excel('dou_old.xlsx', sheet_name = 'Planilha Exec Legisl revisada')\n",
-    "dou_new = pd.read_excel('dou_new.xlsx')"
+    "dou_old = pd.read_excel('data/dou_old.xlsx', sheet_name = 'Planilha Exec Legisl revisada')\n",
+    "dou_new = pd.read_excel('data/dou_new.xlsx')"
    ]
   },
   {
@@ -1710,6 +1710,7 @@
     "title = list(dou_old['title']) + list(dou_new['title'])\n",
     "date = list(dou_old['date']) + list(dou_new['date'])\n",
     "typ =  list(dou_old['type']) + list(dou_new['type'])\n",
+    "origin = list(dou_old['origin']) + list(dou_new['origin'])\n",
     "section =  list(dou_old['section']) + list(dou_new['section'])\n",
     "subject_theme = list(dou_old['subject_theme']) + list(dou_new['General subject-matter (BR)'])\n",
     "health_issue = list(dou_old['major_health_issue']) + list(dou_new['HEALTH TOPIC'])\n",
@@ -1729,7 +1730,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dou = pd.DataFrame(data = {'idxs': idxs, 'title': title, 'date': date, 'typ': typ, 'section': section,\n",
+    "dou = pd.DataFrame(data = {'idxs': idxs, 'title': title, 'date': date, 'typ': typ, 'origin': origin, \n",
+    "                           'section': section,\n",
     "                          'subject_theme': subject_theme, 'health_issue': health_issue, 'covid':covid,\n",
     "                          'doc_cited': doc_cited, 'direct_mention': direct_mention, \n",
     "                           'precise_mention': precise_mention, 'imprecise_mention': imprecise_mention,\n",
@@ -1767,6 +1769,7 @@
        "      <th>title</th>\n",
        "      <th>date</th>\n",
        "      <th>typ</th>\n",
+       "      <th>origin</th>\n",
        "      <th>section</th>\n",
        "      <th>subject_theme</th>\n",
        "      <th>health_issue</th>\n",
@@ -1786,6 +1789,7 @@
        "      <td>PORTARIA Nº 4, DE 27 DE MARÇO DE 2020</td>\n",
        "      <td>2020-04-01</td>\n",
        "      <td>Portaria</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Prorrogação do prazo das medidas administrativ...</td>\n",
        "      <td>COVID-19</td>\n",
@@ -1803,6 +1807,7 @@
        "      <td>PORTARIA Nº 4, de 31 de março de 2020</td>\n",
        "      <td>2020-04-01</td>\n",
        "      <td>Portaria</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Prorrogação do prazo das medidas administrativ...</td>\n",
        "      <td>COVID-19</td>\n",
@@ -1820,6 +1825,7 @@
        "      <td>PORTARIA Nº 4, de 31 de março de 2020</td>\n",
        "      <td>2020-04-01</td>\n",
        "      <td>Portaria</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Prorrogação do prazo das medidas administrativ...</td>\n",
        "      <td>COVID-19</td>\n",
@@ -1837,6 +1843,7 @@
        "      <td>PORTARIA Nº 4, de 31 de março de 2020</td>\n",
        "      <td>2020-04-01</td>\n",
        "      <td>Portaria</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Prorrogação do prazo das medidas administrativ...</td>\n",
        "      <td>COVID-19</td>\n",
@@ -1854,6 +1861,7 @@
        "      <td>PORTARIA Nº 4, de 31 de março de 2020</td>\n",
        "      <td>2020-04-01</td>\n",
        "      <td>Portaria</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Prorrogação do prazo das medidas administrativ...</td>\n",
        "      <td>COVID-19</td>\n",
@@ -1881,6 +1889,7 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1046</th>\n",
@@ -1888,6 +1897,7 @@
        "      <td>RESOLUÇÃO CREF4/SP nº 151, de 11 de julho de 2022</td>\n",
        "      <td>2022-07-12 00:00:00</td>\n",
        "      <td>Resolução</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Educação Física</td>\n",
        "      <td>Physical activity</td>\n",
@@ -1905,6 +1915,7 @@
        "      <td>RESOLUÇÃO COFEN Nº 702, de 15 de julho de 2022</td>\n",
        "      <td>2022-07-18 00:00:00</td>\n",
        "      <td>Resolução</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Enfermagem</td>\n",
        "      <td>Nursing and Midwifery</td>\n",
@@ -1922,6 +1933,7 @@
        "      <td>RESOLUÇÃO COFEN Nº 704, DE 19 DE JULHO DE 2022</td>\n",
        "      <td>2022-07-21 00:00:00</td>\n",
        "      <td>Resolução</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Enfermagem e parada cardiorrespiratoria</td>\n",
        "      <td>Nursing and Midwifery</td>\n",
@@ -1939,6 +1951,7 @@
        "      <td>RESOLUÇÃO CREMERJ Nº 335, DE 14 DE JULHO DE 2022</td>\n",
        "      <td>2022-07-22 00:00:00</td>\n",
        "      <td>Resolução</td>\n",
+       "      <td>Entidades de Fiscalização do Exercício das Pro...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Médico do Trabalho</td>\n",
        "      <td>Health Workforce</td>\n",
@@ -1956,6 +1969,7 @@
        "      <td>PORTARIA CONJUNTA N° 1, DE 28 DE JULHO DE 2022</td>\n",
        "      <td>2022-07-29 00:00:00</td>\n",
        "      <td>Portaria</td>\n",
+       "      <td>Ministério da Saúde/Agência Nacional de Vigilâ...</td>\n",
        "      <td>S01</td>\n",
        "      <td>Varíola dos macacos</td>\n",
        "      <td>Monkeypox</td>\n",
@@ -1969,7 +1983,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1051 rows × 14 columns</p>\n",
+       "<p>1051 rows × 15 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1986,18 +2000,31 @@
        "1049  3211641.0   RESOLUÇÃO CREMERJ Nº 335, DE 14 DE JULHO DE 2022   \n",
        "1050  3213088.0     PORTARIA CONJUNTA N° 1, DE 28 DE JULHO DE 2022   \n",
        "\n",
-       "                     date        typ section  \\\n",
-       "0              2020-04-01   Portaria     S01   \n",
-       "1              2020-04-01   Portaria     S01   \n",
-       "2              2020-04-01   Portaria     S01   \n",
-       "3              2020-04-01   Portaria     S01   \n",
-       "4              2020-04-01   Portaria     S01   \n",
-       "...                   ...        ...     ...   \n",
-       "1046  2022-07-12 00:00:00  Resolução     S01   \n",
-       "1047  2022-07-18 00:00:00  Resolução     S01   \n",
-       "1048  2022-07-21 00:00:00  Resolução     S01   \n",
-       "1049  2022-07-22 00:00:00  Resolução     S01   \n",
-       "1050  2022-07-29 00:00:00   Portaria     S01   \n",
+       "                     date        typ  \\\n",
+       "0              2020-04-01   Portaria   \n",
+       "1              2020-04-01   Portaria   \n",
+       "2              2020-04-01   Portaria   \n",
+       "3              2020-04-01   Portaria   \n",
+       "4              2020-04-01   Portaria   \n",
+       "...                   ...        ...   \n",
+       "1046  2022-07-12 00:00:00  Resolução   \n",
+       "1047  2022-07-18 00:00:00  Resolução   \n",
+       "1048  2022-07-21 00:00:00  Resolução   \n",
+       "1049  2022-07-22 00:00:00  Resolução   \n",
+       "1050  2022-07-29 00:00:00   Portaria   \n",
+       "\n",
+       "                                                 origin section  \\\n",
+       "0     Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "1     Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "2     Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "3     Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "4     Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "...                                                 ...     ...   \n",
+       "1046  Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "1047  Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "1048  Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "1049  Entidades de Fiscalização do Exercício das Pro...     S01   \n",
+       "1050  Ministério da Saúde/Agência Nacional de Vigilâ...     S01   \n",
        "\n",
        "                                          subject_theme  \\\n",
        "0     Prorrogação do prazo das medidas administrativ...   \n",
@@ -2051,7 +2078,7 @@
        "1049              No               Yes              No        NaN  \n",
        "1050             Yes                No              No       Soft  \n",
        "\n",
-       "[1051 rows x 14 columns]"
+       "[1051 rows x 15 columns]"
       ]
      },
      "execution_count": 18,
